data/derived/fa15/progs/unify/prog1209.ml.out
Characters 341-358:
  let args = (List.rev ((List.combine l2 l2) @ [(0,0),(0,0),(0,0)]))  in
                                                ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type 'd * 'd
